@@ -75,14 +75,10 @@ class PostServiceTest {
         when(postRepository.getPostsWithProduct(Mockito.anyString())).thenReturn(List.of(post));
 
         PostsWithProductResponseDTO response = postService.getPostsWithProduct(productName);
-        Post postTaza = response.getPosts().getFirst();
+        Post postTaza = response.getPosts().get(0);
 
         Assertions.assertEquals(productName, response.getName());
         Assertions.assertTrue(postTaza.productNameContains(productName));
-    }
-
-    @Test
-    void createUserResponse() {
     }
 
     @Test
@@ -95,13 +91,5 @@ class PostServiceTest {
 
     @Test
     void getPostsByPriceRange() {
-    }
-
-    @Test
-    void parseStringToDouble() {
-    }
-
-    @Test
-    void convertToPostDTO() {
     }
 }
